fix: align techs icone

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -243,6 +243,7 @@ section{
     margin-top: 167px;
     color: white;
     gap: 100px;
+    border: 1px solid white;
   }
 
 
@@ -254,6 +255,15 @@ section{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif   ;
   }
 
+  .align-all-names{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border: 1px solid white;
+    align-items: center;
+  }
+
+
   .align-all-names p{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 35px;
@@ -262,8 +272,15 @@ section{
   .align-all-names h4{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 24px;
-    margin-left: 50px;
     margin-top: 44px;
+  }
+
+  .logos-img{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+
+
   }
 
 
